--- a/index.html
+++ b/index.html
@@ -59,6 +59,47 @@
             <p class="produtos-descricao">Jogo de luta</p>
             <p class="produtos-preco">ONLINE  MULTIPLATAFORMA</p>
        </li>
+
+       <li>
+            <h2>Try Again</h2>
+            <img src="Imagens/TRY AGAIN.jpg">
+            <p class="produtos-descricao">Jogo de plataforma igual ao inside</p>
+            <p class="produtos-preco">NO-ONLINE</p>
+         </li>
+
+         <li>
+            <h2>Operation harsh doorstop</h2>
+            <img src="Imagens/Operation harsh doorstop.jpg">
+            <p class="produtos-descricao">Jogo fps tatico, muito daora</p>
+            <p class="produtos-preco">ONLINE</p>
+          </li>
+         
+         <li>
+            <h2>Deceit</h2>
+            <img src="Imagens/deceit-pc-jogo-steam-cover.jpg">
+            <p class="produtos-descricao">Deceit é um jogo de terror FPS online gratuito , de dedução social</p>
+            <p class="produtos-preco">ONLINE  MULTIPLATAFORMA NO 2</p>
+       </li>
+              <li>
+            <h2>Atomfall </h2>
+            <img src="Imagens/Atomfall.jpg">
+            <p class="produtos-descricao">Atomfall é um próximo jogo de ação e sobrevivência</p>
+            <p class="produtos-preco">NO-ONLINE</p>
+         </li>
+
+         <li>
+            <h2></h2>
+            <img src="Imagenillness.jpg">
+            <p class="produtos-descricao">Jogo de ZOMBIE em mundo aberto</p>
+            <p class="produtos-preco">ONLINE</p>
+          </li>
+         
+         <li>
+            <h2></h2>
+            <img src="Imagens/halla.jpg">
+            <p class="produtos-descricao">Jogo de luta</p>
+            <p class="produtos-preco">ONLINE  MULTIPLATAFORMA</p>
+       </li>
    </ul>  
   </main>
   <footer>
