--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
    <div class="caixa">
      <h1></h1>
       <nav>  
-        <ul>
-        </ul>
+<nav>  
+  <ul>
+    <li><a href="index.html">Jogos Comuns</a></li>
+    <li><a href="multiplataforma.html">Multiplataforma</a></li>
+  </ul>
+</nav>
       </nav>
      </div>
   </header>
@@ -88,18 +92,79 @@
          </li>
 
          <li>
-            <h2></h2>
-            <img src="Imagenillness.jpg">
-            <p class="produtos-descricao">Jogo de ZOMBIE em mundo aberto</p>
+            <h2>Phasmophobia</h2>
+            <img src="Imagens/phasmophobia.jpg">
+            <p class="produtos-descricao">Phasmophobia é um jogo de terror psicológico de cooperação online entre 4 jogadores. Tu e a tua equipa de investigadores do paranormal irão visitar locais </p>
             <p class="produtos-preco">ONLINE</p>
           </li>
-         
-         <li>
-            <h2></h2>
-            <img src="Imagens/halla.jpg">
-            <p class="produtos-descricao">Jogo de luta</p>
-            <p class="produtos-preco">ONLINE  MULTIPLATAFORMA</p>
-       </li>
+ <li>
+    <h2>Gift Collector</h2>
+    <img src="Imagens/gift collector.jpg">
+    <p class="produtos-descricao">Jogo de terror com foco em exploração. Recolha presentes e evite perigos misteriosos.</p>
+    <p class="produtos-preco">NO-ONLINE</p>
+</li>
+
+<li>
+    <h2>Hollow Knight</h2>
+    <img src="Imagens/hollow knight.png">
+    <p class="produtos-descricao">Um premiado jogo de aventura e ação em 2D, focado em exploração e desafios.</p>
+    <p class="produtos-preco">NO-ONLINE</p>
+</li>
+
+<li>
+    <h2>South of Midnight</h2>
+    <img src="Imagens/south of midnight.jpg">
+    <p class="produtos-descricao">Jogo de aventura com foco em narrativa e visual único.</p>
+    <p class="produtos-preco">NO-ONLINE</p>
+</li>
+
+<li>
+    <h2>Supernatural</h2>
+    <img src="Imagens/supernatural.jpg">
+    <p class="produtos-descricao">Jogo de terror com elementos cooperativos online. Enfrente o desconhecido com outros jogadores.</p>
+    <p class="produtos-preco">TERROR ONLINE</p>
+</li>
+
+<li>
+    <h2>Just Another Night Shift</h2>
+    <img src="Imagens/just another.jpg">
+    <p class="produtos-descricao">Jogo de terror com foco em atmosfera e tensão durante o turno da noite.</p>
+    <p class="produtos-preco">NO-ONLINE</p>
+</li>
+
+<li>
+    <h2>Oh Deer</h2>
+    <img src="Imagens/oh deer.jpg">
+    <p class="produtos-descricao">Caça online.</p>
+    <p class="produtos-preco">ONLINE</p>
+</li>
+
+<li>
+    <h2>KartKraft</h2>
+    <img src="Imagens/Kartkraft.jpg">
+    <p class="produtos-descricao">Simulador realista de kart com ótima física e gráficos impressionantes.</p>
+    <p class="produtos-preco">ONLINE</p>
+</li>
+
+<li>
+    <h2>Intruder</h2>
+    <img src="Imagens/Intruder.jpg">
+    <p class="produtos-descricao">Jogo tático de espionagem multiplayer. Comunicação e estratégia são fundamentais.</p>
+    <p class="produtos-preco">ONLINE</p>
+</li>
+
+<li>
+    <h2>Dying Light</h2>
+    <img src="Imagens/dying light.jpg">
+    <p class="produtos-descricao">Jogo de ação e sobrevivência em mundo aberto com parkour e zumbis.</p>
+    <p class="produtos-preco">NO-ONLINE</p>
+</li>
+<li>
+    <h2>No man's sky</h2>
+    <img src="Imagens/no mans sky.jpg">
+    <p class="produtos-descricao">No Man's Sky é um videojogo de ficção científica com elementos de aventura e sobrevivência, desenvolvido e publicado pelo estúdio independente Hello Games.</p>
+    <p class="produtos-preco">ONLINE</p>
+</li>
    </ul>  
   </main>
   <footer>
